# ducktools-pytui

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflow_templates/: auto_test.yml  publish_to_pypi.yml  publish_to_testpypi.yml
.github/workflows/: auto_test.yml  build_zipapp.yml  publish_to_pypi.yml  publish_to_testpypi.yml  test_builds.yml
.github/workflows/templates/: publish_to_pypi.yml  publish_to_testpypi.yml
scripts/: build_zipapp.py  upgrade_requirements.py
src/duckpy/: __init__.py  __main__.py  commands.py  ui.py  util.py
src/ducktools/MODULENAME/: __init__.py
src/ducktools/pytui/: __init__.py  __main__.py  _lazy_imports.py  commands.py  config.py  ui.py  util.py
src/ducktools/pytui/runtime_installers/: __init__.py  base.py  pythoncore.py  uv.py
src/ducktools/pytui/shell_scripts/: activate_pytui.sh
src/ducktools/pytui/shells/: __init__.py  _core.py  _shell_core.py  bash.py  cmd.py  powershell.py  zsh.py
src/ducktools/pytui/shells/scripts/: activate_pytui.ps1  activate_pytui.sh
src/ducktools/pytui/shells/scripts/zsh/: .zshrc
src/ducktools/pytui/util/: __init__.py
tests/: conftest.py  test_pymanager_handling.py  test_uv_handling.py
tests/test_shells/: test_core.py
tests/test_shells/posix/: test_zsh.py
tests/test_shells/win32/: test_cmd.py
tests/ui/: conftest.py  test_installs_table.py  test_util.py
tests/ui/posix/: test_installs_table.py
tests/win32/: test_pymanager_handling.py
