[build-system]
requires = [
    "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name="duckpy"
description="A Python installer, manager and runner, written in Python. Windows only (for now)."
authors = [
  { name="David C Ellis" },
]
readme="README.md"
requires-python = "~=3.13.0"
dependencies = [
    "ducktools-pythonfinder>=0.6.5",
    "ducktools-lazyimporter>=0.7.1",
    "ducktools-classbuilder>=0.7.4",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ['version']

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "duckpy.__version__"}

[tool.pytest.ini_options]
addopts= "--cov=src/ --cov-report=term-missing"
testpaths = [
    "tests",
]